Line spacing between the contact details issue in profile page on mobile issue fixed.

--- a/docroot/sites/all/themes/ambitious/sass/layouts/profile.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/profile.scss
@@ -207,7 +207,6 @@ body.profile .top-header {
       margin: 0;
       width: auto;
       float: left;
-      margin-bottom: 27px;
       margin-left: 12px;
     }
   }
